Added get all bars and filters in the same endpoint, also added the functionality to filter by user location
